- Option to build without dependencies - Common examples code extracted to engine.zig - Fixed working with temporary hashmap pointers of OutputStorage - Re-assigning back previous contexts in instrumentation processor - Fix overlapping inserts

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -185,6 +185,7 @@
                 "-freference-trace",
                 "-DlogInterception",
                 "-DmemoryFrames=15",
+                "-Ddependencies=false",
                 "--summary",
                 "none"
             ],
