--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -310,6 +310,29 @@
                 "clear": false
             }
         },
+
+        {
+            "label": "Cross-compile Launcher Release",
+            "command": "zig",
+            "args": [
+                "build",
+                "launcher",
+                "--release=safe",
+                "-fwine",
+                "-Dtarget=x86_64-windows-gnu",
+                "-freference-trace"
+            ],
+            "problemMatcher": "$zig",
+            "group": "build",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": true,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            }
+        },
         {
             "label": "Start LLDB Server",
             "command": "pkexec",
